--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
       <a class="link-text footer-nav-link" href="about.html">About</a>
       <a class="link-text footer-nav-link" href="services.html">Services</a>
     </footer>
-    <div class="container-fluid container-grid"><a href="#" target="_blank" class="social-image"><img class="instagram-icon" src="./socialicons/webicon-instagram.png" alt="pin"></a><a href="#" target="_blank" class="social-image"><img class="facebook-icon" src="./socialicons/webicon-facebook.png" alt="fb"></a><a href="#" target="_blank" class="social-image"><img class="twitter-icon" src="./socialicons/webicon-twitter.png" alt="twit"></a><a href="#" target="_blank" class="social-image"><img class="vimeo-icon" src="./socialicons/webicon-vimeo.png" alt="vim"></a>
+    <div class="container-fluid container-grid"><a href="#" target="_blank" class="social-image"><img class="instagram-icon" src="./socialicons/webicon-instagram.png" alt="pin"></a><a href="https://www.facebook.com/wtnyein" target="https://www.facebook.com/wtnyein" class="social-image"><img class="facebook-icon" src="./socialicons/webicon-facebook.png" alt="fb"></a><a href="#" target="_blank" class="social-image"><img class="twitter-icon" src="./socialicons/webicon-twitter.png" alt="twit"></a><a href="#" target="_blank" class="social-image"><img class="vimeo-icon" src="./socialicons/webicon-vimeo.png" alt="vim"></a>
     </div>
   </div>
   <div class="container-grid copyright">
-    <p class="paragraph footer-fine-print"><br>Copy Right&nbsp;© &nbsp;Win Tech</p>
+    <p class="paragraph footer-fine-print"><br>Copy Right&nbsp;©&nbsp;Win Tech</p>
   </div>
   <script src="js/jquery.min.js"></script>
   <script src="js/outofview.js"></script>
