--- a/services.html
+++ b/services.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="la">
 
 <head>
@@ -27,7 +27,7 @@
     </div>
     <div class="container-grid page-heading">
       <nav class="container-fluid header-container container-grid">
-        <h1>Life is Like a Camera</h1>
+        <h1>Life is Like a Computer</h1>
         <div class="rule thin-row no-pad">
           <hr>
         </div>
