--- a/services.html
+++ b/services.html
@@ -100,7 +100,7 @@
     </div>
   </div>
   <div class="container-grid contact-section">
-    <h2 class="name-heading" id="address">Shutterbug Photography<br>
+    <h2 class="name-heading" id="address">Win Tech<br>
     </h2>
     <p class="paragraph address"><span>1905 Woodstock Rd<br>Roswell, GA 30022<br>866-734-4865</span>
     </p>
